ansible/apps/files/manifests/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: traefik-dashboard
  namespace: traefik
spec:
  rules:
    - host: traefik.lab
      http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  number: 9000
            path: /dashboard
            pathType: Prefix
          - backend:
              service:
                name: traefik
                port:
                  number: 9000
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - traefik.lab
      secretName: traefik-ssl
